<resources>
    <string name="app_name">Test de la muerte</string>
    <string name="info_personal">Información personal</string>
    <string name="txt_nombre">Nombre (Requerido)</string>
    <string name="et_nombre">Ej. Manuel</string>
    <string name="txt_apellidos">Apellidos</string>
    <string name="et_apellidos">Ej. Fernández Martín</string>
    <string name="txt_fecha">Fecha nacimiento (Requerido)</string>
    <string name="et_fecha">Ej. 16/12/1995</string>
    <string name="txt_lugar">Lugar de nacimiento</string>
    <string name="et_lugar">Ej. Barcelona</string>
    <string name="txt_sexo">Sexo (Requerido)</string>
    <string name="sexo_hombre">Hombre</string>
    <string name="sexo_mujer">Mujer</string>
    <string name="sexo_otros">Otros</string>
    <string name="act1_name">¿Cómo voy a morir?</string>
    <string name="act2_name">Así vas a morir</string>
    <string name="txt_vicios">Vicios</string>
    <string name="vicios_drogas">Drogas</string>
    <string name="vicios_sexo">Sexo</string>
    <string name="vicios_alcohol">Alcohol</string>
    <string name="vicios_tabaco">Tabaco</string>
    <string name="vicios_deporte">Deporte</string>
    <string name="vicios_madrugar">Madrugar</string>
    <string name="profesion">Profesión (Requerido)</string>
    <string name="boton_calc">Calcular muerte</string>
    <string name="txt_error">Este campo es obligatorio.</string>
    <string-array name="array_profesiones">
        <item>Selecciona una opción</item>
        <item>Funcionario/a</item>
        <item>Pringao/a</item>
        <item>Becario/a</item>
    </string-array>
    <string name="txt_aviso">* Para poder calcular la muerte, tienes que seleccionar una profesión valida.</string>
    <string name="completa_requeridos">Completa los campos requeridos.</string>
    <string name="e33">Error N33</string>
    <string-array name="array_descripciones">
        <item>Subirás al coche, se te enredara la bufanda en la rueda y morirás estrangulado/a. Es una pena, pero nadie se acordará de ti.</item>
        <item>Un día iras tan borracho/a que intentarás abrazar el reflejo del agua, te caerás y te ahogaras. Lo peor de todo es que ningún amigo/a tuyo/a te recogerá para no soltar su cerveza.</item>
        <item>Te dejaras barba, al tenerla tan larga (La barba…). Un día se te olvidara enrollártela, te tropezaras con ella y te partirás el cuello.</item>
        <item>Se te olvidará la combinación de la caja fuerte, chutaras la caja fuerte, se te infectará el dedo gordo y morirás.</item>
        <item>Te encontraras un tutorial por internet que, en vez de explicar por voz, lo hacía con un bloc de notas. Decidirás pegarte un tiro antes que soportar eso.</item>
    </string-array>
    <string name="res_lugar_1">Lugar de la muerte</string>
    <string name="res_lugar_2h">Buen hombre</string>
    <string name="res_lugar_2m">Buena mujer</string>
    <string name="res_lugar_2o">Buen... Espera, ¿Qué eras?</string>
    <string name="res_lugar3">, mejor</string>
    <string name="vicios_desc_1">Quizá aguantes algo más de tiempo, pero si no tienes ningún vicio… Quizá lleves tiempo muerto.</string>
    <string name="vicios_desc_2">Tienes pocos vicios, y encima de los perores, ¿a quién le gusta madrugar?</string>
    <string name="vicios_desc_3">Tienes pocos vicios, así que aprovecha que ya sabes tu muerte.</string>
    <string name="vicios_desc_4">Algún que otro vicio tienes… Pero qué más da si vas a morir ¿no?</string>
    <string name="vicios_desc_5">Tientas demasiado a la suerte… ya me lo dirás ;)</string>
    <string name="vicios_desc_6">Con todos los vicios que tienes, no sé ni cómo sigues vivo…</string>
    <string name="tumba">Tumba</string>
</resources>
